tailwind succesfully incorporated
Integrates TailwindCSS to dot which allows for better UI design

- also adds access for the flowbite library of components

-old ui deleted

--- a/src/index.html
+++ b/src/index.html
@@ -1,69 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Dot</title>
-  <link href="index.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="markdown-styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="dist/output.css" rel="stylesheet">
 </head>
 <body>
-  <div id="backgroundOverlay"></div>
-  <div id="screen">
-    <div id="menu-side" class="no-horizontal-scroll">
-      <div id="menu-container">      
-        <div class="header">
-          <h1>My Documents</h1>
-          <button id="selectDirectoryButton"></button>
-        </div>
-        
-        <div id="loadingSpinner" class="spinner"></div>
-        <!-- Rest of the menu content... -->
-      </div>
-      <div id="sidebar" class="no-horizontal-scroll">
-        <!-- Sidebar content will be dynamically generated using JavaScript -->
-      </div>
-      <div id="fileTree" class="no-horizontal-scroll">
-        <!-- File tree content goes here -->
-      </div>
-      <div id="Switchboard">
-        <div class="switch-group">
-          <img src="./Assets/icons/chat LM.png" alt="Icon" class="switch-icon">
-          <p class="switch-text">Big Dot</p>
-          <label class="switch">
-            <input type="checkbox" id="scriptToggle">
-            <span class="slider round"></span>
-          </label>
-        </div>
-        <div class="switch-group">
-          <img src="./Assets/icons/art LM.png" alt="Icon" class="switch-icon">
-          <p class="switch-text">Gallery view</p>
-          <label class="switch">
-            <input type="checkbox" id="galleryToggle">
-            <span class="slider round"></span>
-          </label>
-        </div>
-      </div>
+  <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 bottom-0">Default</button>
 
-      <div id="Ass">
-        <img src="./Assets/logo2.png" alt="Logo" id="menu-logo">
-      </div>
-    </div>
-    <div id="chat-side">
-      <div id="chat-container">
-        <div id="bot-message"></div>
-      </div>
-      <div id="user-input-container">
-        <input type="text" id="user-input" placeholder="Type your message...">
-        <button id="send-button" onclick="sendMessage('')">
-          <img src="./Assets/arrow.svg" alt="Send Icon" style="width: 18px; height: 18px;">
-        </button>
-      </div>
-    </div>
+  <div class="absolute bottom-0 right-0 mb-6">
+    <label for="default-input" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Default input</label>
+    <input type="text" id="default-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
   </div>
+  
 
 
-  <script src="./render.js"></script>
-  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="../node_modules/marked/marked.min.js"></script>
+  <script src="/node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
 </html>
