Updated tailwind and added some ui elements

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,81 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="dist/output.css" rel="stylesheet">
-</head>
-<body>
-  <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 bottom-0">Default</button>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="dist/output.css" rel="stylesheet" />
+    </head>
+    <body>
+        <div class="flex h-screen">
+            <!-- Your other content goes here -->
 
-  <div class="absolute bottom-0 right-0 mb-6">
-    <label for="default-input" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Default input</label>
-    <input type="text" id="default-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-  </div>
-  
+            <div class="flex h-full w-1/5 flex-col justify-between bg-gray-300">
+                <h1 class="text-center">Load documents</h1>
+                <div class="flex grow flex-col items-center justify-end">
+                    <label
+                        class="relative my-1 me-5 inline-flex cursor-pointer items-center"
+                    >
+                        <input
+                            type="checkbox"
+                            value=""
+                            class="peer sr-only"
+                            checked
+                        />
+                        <div
+                            class="peer h-6 w-11 rounded-full bg-gray-200 after:absolute after:start-[2px] after:top-0.5 after:h-5 after:w-5 after:rounded-full after:border after:border-gray-300 after:bg-white after:transition-all after:content-[''] peer-checked:bg-yellow-400 peer-checked:after:translate-x-full peer-checked:after:border-white peer-focus:ring-4 peer-focus:ring-yellow-300 rtl:peer-checked:after:-translate-x-full dark:border-gray-600 dark:bg-gray-700 dark:peer-focus:ring-yellow-800"
+                        ></div>
+                        <span
+                            class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"
+                            >Big dot</span
+                        >
+                    </label>
 
+                    <label
+                        class="relative my-1 me-5 inline-flex cursor-pointer items-center"
+                    >
+                        <input
+                            type="checkbox"
+                            value=""
+                            class="peer sr-only"
+                            checked
+                        />
+                        <div
+                            class="peer h-6 w-11 rounded-full bg-gray-200 after:absolute after:start-[2px] after:top-0.5 after:h-5 after:w-5 after:rounded-full after:border after:border-gray-300 after:bg-white after:transition-all after:content-[''] peer-checked:bg-purple-600 peer-checked:after:translate-x-full peer-checked:after:border-white peer-focus:ring-4 peer-focus:ring-purple-300 rtl:peer-checked:after:-translate-x-full dark:border-gray-600 dark:bg-gray-700 dark:peer-focus:ring-purple-800"
+                        ></div>
+                        <span
+                            class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"
+                            >Gallery</span
+                        >
+                    </label>
 
-  <script src="/node_modules/flowbite/dist/flowbite.min.js"></script>
-</body>
+                    <img src="Assets/logo2.png" alt="Logo" class="w-3/4" />
+                </div>
+            </div>
+
+            <div class="relative flex-grow">
+                <!-- Content of the 80% width container -->
+                <div
+                    class="absolute inset-x-0 bottom-0 mb-4 ml-4 mr-4 flex items-center"
+                >
+                    <input
+                        type="text"
+                        id="default-input"
+                        class="h-9.5 block flex-grow rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-blue-500 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500"
+                    />
+                    <!-- send button -->
+                    <button
+                        class="group relative me-2 ml-1 inline-flex h-11 items-end justify-end overflow-hidden rounded-lg bg-gradient-to-br from-cyan-500 to-blue-500 p-0.5 text-sm font-medium text-gray-900 hover:text-white focus:outline-none focus:ring-4 focus:ring-cyan-200 group-hover:from-cyan-500 group-hover:to-blue-500 dark:text-white dark:focus:ring-cyan-800"
+                    >
+                        <span
+                            class="relative rounded-md bg-white px-5 py-2.5 transition-all duration-75 ease-in group-hover:bg-opacity-0 dark:bg-gray-900"
+                        >
+                            Send
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <script src="/node_modules/flowbite/dist/flowbite.min.js"></script>
+    </body>
 </html>
