Updated ui with heading

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
             <!-- Your other content goes here -->
 
             <div class="flex h-full w-1/5 flex-col justify-between bg-gray-300">
-                <h1 class="text-center">Load documents</h1>
+                <h1 class="text-2xl font-bold dark:text-white">
+                    Load documents
+                </h1>
                 <div class="flex grow flex-col items-center justify-end">
                     <label
                         class="relative my-1 me-5 inline-flex cursor-pointer items-center"
