Added terms and conditions

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
             <!-- Your other content goes here -->
 
             <div class="flex h-full w-1/5 flex-col justify-between bg-gray-300">
-                <h1 class="text-2xl font-bold dark:text-white">
+                <h1 class="mx-1.5 text-2xl font-bold dark:text-white">
                     Load documents
                 </h1>
                 <div class="flex grow flex-col items-center justify-end">
                     <label
-                        class="relative my-1 me-5 inline-flex cursor-pointer items-center"
+                        class="relative my-1 me-5 ms-4 inline-flex cursor-pointer items-center rtl:ml-0"
                     >
                         <input
                             type="checkbox"
@@ -30,10 +30,14 @@
                             class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"
                             >Big dot</span
                         >
+                        <img
+                            src="Assets/icons/chat LM.png"
+                            class="mx-1 size-6"
+                        />
                     </label>
 
                     <label
-                        class="relative my-1 me-5 inline-flex cursor-pointer items-center"
+                        class="relative my-1 me-5 ms-4 inline-flex cursor-pointer items-center"
                     >
                         <input
                             type="checkbox"
@@ -48,9 +52,19 @@
                             class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"
                             >Gallery</span
                         >
+                        <img
+                            src="Assets/icons/art LM.png"
+                            class="mx-1 size-6"
+                        />
                     </label>
 
                     <img src="Assets/logo2.png" alt="Logo" class="w-3/4" />
+                    <p
+                        class="mx-1 mb-1.5 text-center text-xs font-light text-gray-400"
+                    >
+                        Answers may not be completely accurate, consider
+                        checking important information.
+                    </p>
                 </div>
             </div>
 
