Added ui improvements
- removed gallley view
- changed toggle color to green

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
         <div class="flex h-screen">
             <!-- Your other content goes here -->
 
-            <div class="flex h-full w-1/5 flex-col justify-between bg-gray-300">
+            <div
+                class="flex h-full w-1/5 flex-col justify-between border-x border-gray-400 bg-gray-50"
+            >
                 <h1 class="mx-1.5 text-2xl font-bold dark:text-white">
                     Load documents
                 </h1>
@@ -17,14 +19,9 @@
                     <label
                         class="relative my-1 me-5 ms-4 inline-flex cursor-pointer items-center rtl:ml-0"
                     >
-                        <input
-                            type="checkbox"
-                            value=""
-                            class="peer sr-only"
-                            checked
-                        />
+                        <input type="checkbox" value="" class="peer sr-only" />
                         <div
-                            class="peer h-6 w-11 rounded-full bg-gray-200 after:absolute after:start-[2px] after:top-0.5 after:h-5 after:w-5 after:rounded-full after:border after:border-gray-300 after:bg-white after:transition-all after:content-[''] peer-checked:bg-yellow-400 peer-checked:after:translate-x-full peer-checked:after:border-white peer-focus:ring-4 peer-focus:ring-yellow-300 rtl:peer-checked:after:-translate-x-full dark:border-gray-600 dark:bg-gray-700 dark:peer-focus:ring-yellow-800"
+                            class="peer h-5 w-9 rounded-full bg-gray-200 after:absolute after:start-[2px] after:top-[2px] after:h-4 after:w-4 after:rounded-full after:border after:border-gray-300 after:bg-white after:transition-all after:content-[''] peer-checked:bg-green-600 peer-checked:after:translate-x-full peer-checked:after:border-white peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-gray-50 rtl:peer-checked:after:-translate-x-full dark:border-gray-600 dark:bg-gray-700 dark:peer-focus:ring-green-800"
                         ></div>
                         <span
                             class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"
@@ -32,21 +29,16 @@
                         >
                         <img
                             src="Assets/icons/chat LM.png"
-                            class="mx-1 size-6"
+                            class="mx-1 size-5"
                         />
                     </label>
-
+                    <!--
                     <label
                         class="relative my-1 me-5 ms-4 inline-flex cursor-pointer items-center"
                     >
-                        <input
-                            type="checkbox"
-                            value=""
-                            class="peer sr-only"
-                            checked
-                        />
+                        <input type="checkbox" value="" class="peer sr-only" />
                         <div
-                            class="peer h-6 w-11 rounded-full bg-gray-200 after:absolute after:start-[2px] after:top-0.5 after:h-5 after:w-5 after:rounded-full after:border after:border-gray-300 after:bg-white after:transition-all after:content-[''] peer-checked:bg-purple-600 peer-checked:after:translate-x-full peer-checked:after:border-white peer-focus:ring-4 peer-focus:ring-purple-300 rtl:peer-checked:after:-translate-x-full dark:border-gray-600 dark:bg-gray-700 dark:peer-focus:ring-purple-800"
+                            class="peer h-5 w-9 rounded-full bg-gray-200 after:absolute after:start-[2px] after:top-[2px] after:h-4 after:w-4 after:rounded-full after:border after:border-gray-300 after:bg-white after:transition-all after:content-[''] peer-checked:bg-green-600 peer-checked:after:translate-x-full peer-checked:after:border-white peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-gray-50 rtl:peer-checked:after:-translate-x-full dark:border-gray-600 dark:bg-gray-700 dark:peer-focus:ring-green-800"
                         ></div>
                         <span
                             class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"
@@ -54,10 +46,10 @@
                         >
                         <img
                             src="Assets/icons/art LM.png"
-                            class="mx-1 size-6"
+                            class="mx-1 size-5"
                         />
                     </label>
-
+                    -->
                     <img src="Assets/logo2.png" alt="Logo" class="w-3/4" />
                     <p
                         class="mx-1 mb-1.5 text-center text-xs font-light text-gray-400"
