--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="dist/output.css" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="markdown-styles.css" />
     </head>
     <body>
         <div class="flex h-screen">
@@ -22,18 +23,48 @@
                     </h1>
                     <button
                         id="selectDirectoryButton"
-                        type="button"
-                        class="me-2 inline-flex items-center rounded-lg bg-blue-700 p-2.5 text-center text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                        class="0 group relative me-2 ml-1 inline-flex h-11 items-end justify-end overflow-hidden rounded-lg bg-gradient-to-br from-cyan-500 to-blue-500 p-0.5 text-sm font-medium text-gray-900 shadow-md hover:text-white focus:border-none focus:outline-none group-hover:from-cyan-500 group-hover:to-blue-500 dark:text-white dark:focus:ring-cyan-800"
                     >
-                        <img
-                            src="./Assets/icons/new folder LM.png"
-                            alt="Icon"
-                            class="h-5 w-5"
-                        />
-                        <span class="sr-only">Icon description</span>
+                        <span
+                            class="relative rounded-md bg-white px-5 py-2.5 transition-all duration-75 ease-in group-hover:bg-opacity-0 dark:bg-gray-900"
+                        >
+                            <img
+                                src="Assets/arrow.svg"
+                                alt="Arrow send icon"
+                                class="h-5 w-5 text-gray-900 dark:text-white"
+                            />
+                        </span>
                     </button>
                 </div>
 
+                <div id="loadingSpinner" class="spinner">
+                    <div role="status">
+                        <svg
+                            aria-hidden="true"
+                            class="h-10text-gray-200 inline w-10 animate-spin fill-blue-600 dark:text-gray-600"
+                            viewBox="0 0 100 101"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
+                                fill="currentColor"
+                            />
+                            <path
+                                d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
+                                fill="currentFill"
+                            />
+                        </svg>
+                        <span class="sr-only">Loading...</span>
+                    </div>
+                </div>
+                <!-- Rest of the menu content... -->
+                <div id="sidebar" class="no-horizontal-scroll">
+                    <!-- Sidebar content will be dynamically generated using JavaScript -->
+                </div>
+                <div id="fileTree" class="no-horizontal-scroll">
+                    <!-- File tree content goes here -->
+                </div>
                 <div
                     id="switches and logo"
                     class="flex grow flex-col items-center justify-end"
@@ -41,7 +72,12 @@
                     <label
                         class="relative my-1 me-5 ms-4 inline-flex cursor-pointer items-center rtl:ml-0"
                     >
-                        <input type="checkbox" value="" class="peer sr-only" />
+                        <input
+                            id="scriptToggle"
+                            type="checkbox"
+                            value=""
+                            class="peer sr-only"
+                        />
                         <div
                             class="peer h-5 w-9 rounded-full bg-gray-200 after:absolute after:start-[2px] after:top-[2px] after:h-4 after:w-4 after:rounded-full after:border after:border-gray-300 after:bg-white after:transition-all after:content-[''] peer-checked:bg-green-400 peer-checked:after:translate-x-full peer-checked:after:border-white peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-gray-50 rtl:peer-checked:after:-translate-x-full dark:border-gray-600 dark:bg-gray-700 dark:peer-focus:ring-green-800"
                         ></div>
@@ -83,8 +119,13 @@
                 </div>
             </div>
 
-            <div id="chat-side" class="relative flex-grow">
+            <div id="chat-side" class="relative w-4/5 flex-grow">
                 <!-- Content of the 80% width container -->
+
+                <div id="chat-container">
+                    <div id="bot-message"></div>
+                </div>
+
                 <div
                     id="user input and button"
                     class="absolute inset-x-0 bottom-0 mb-4 ml-4 mr-4 flex items-center"
@@ -97,6 +138,7 @@
                     <!-- send button -->
                     <button
                         id="send-button"
+                        onclick="sendMessage('')"
                         class="0 group relative me-2 ml-1 inline-flex h-11 items-end justify-end overflow-hidden rounded-lg bg-gradient-to-br from-cyan-500 to-blue-500 p-0.5 text-sm font-medium text-gray-900 shadow-md hover:text-white focus:border-none focus:outline-none group-hover:from-cyan-500 group-hover:to-blue-500 dark:text-white dark:focus:ring-cyan-800"
                     >
                         <span
